Change: moved display of 'update' and 'cancel' buttons on edit comments. Fix: JS confirmation warning when deleting an article. Change: moved z-index of message-box to be lower than dropdowns in menu.

--- a/public/css/office.css
+++ b/public/css/office.css
@@ -749,7 +749,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff9389', end
 	right:0px;
 	height: 40px;
 	width:100%;
-	z-index:81;
+	z-index:56;
 	font-size: 1.8em;
 }
 #message-box .action-message,
@@ -1209,10 +1209,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', end
 }
 #content .edit-something-form input[type=file] {
 	clear:left;
-	display: block;
+	display: inline-block;
 	margin: 10px 0;
 }
 #content .edit-something-form input[type=submit] {
+	display: inline-block;
+	float: right;
+	margin: 5px 0 0 10px;
 	background: #4b83b4; /* Old browsers */
 	background: -moz-linear-gradient(top,  #4b83b4 0%, #3c698c 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4b83b4), color-stop(100%,#3c698c)); /* Chrome,Safari4+ */
@@ -1223,6 +1226,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', end
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4b83b4', endColorstr='#3c698c',GradientType=0 ); /* IE6-9 */
 }
 #content .edit-something-form span.cancel {
+	display: inline-block;
+	float:right;
+	margin: 5px 10px 0 10px;
 	padding: 2px 5px;
 	background-color: rgba(204,0,0,0.9);
 	background: #cc0000; /* Old browsers */
